extends Node2D

@onready var baixo = $Baixo
@onready var fogo1 = $Fogo1
@onready var fogo2 = $Fogo2
@onready var agua1 = $Agua1
@onready var agua2 = $Agua2
@onready var folha1 = $Folha1
@onready var folha2 = $Folha2
@onready var pedra1 = $Pedra1
@onready var pedra2 = $Pedra2

func _ready():
	#var baixo = $Baixo
	#var fogo1 = $Fogo1
	#var agua1 = $Agua1
	#var agua2 = $Agua2
	pass
	
	
	
